gh-501 added descriptions. Fixed issue where labels would get stuck after updating chart type

--- a/ui/src/main/webapp/css/style.css
+++ b/ui/src/main/webapp/css/style.css
@@ -367,3 +367,7 @@ quick-query {
     min-width: 200px;
 }
 
+.dialog-500 {
+    width: 500px;
+}
+
